<resources>
    <string name="app_name">Plantly</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_plants">Plants</string>
    <string name="title_notifications">Notifications</string>
    <string name="empty_plant_list">No plants found</string>
    <string name="error_plant_list">Error getting user plants</string>
    <string name="add_a_plant">Add a Plant</string>
    <string name="title_activity_plant_detail">PlantDetailActivity</string>
    <string name="action_settings">Settings</string>
    <string name="photo_of_the_plant">Photo of the plant</string>
    <string name="plant_saved">Plant saved</string>

    <string name="water_freq">Water Frequency</string>
    <string name="soil_freq">Soil Frequency</string>
    <string name="name">Name</string>
    <string name="type">Type</string>

    <string name="header_img_content_desc">Image of the plant</string>
    <string name="age">Age</string>
    <string name="birthday">Birthday</string>
    <string name="next_watering">Next Watering</string>
    <string name="channel_name">Default</string>
    <string name="channel_description">Miscellaneous</string>
    <string name="water_plant">Water plant</string>
    <string name="fertilize_plant">Fertilize plant</string>
    <string name="add_cover_photo">Add cover photo</string>
    <string name="no_plants_to_water">No plants to water today!</string>
    <string name="good_morning">Good Morning</string>
    <string name="restore_complete">Restore complete</string>
    <string name="restore_complete_message">We successfully restored data from your backup. Plantly will restart to update the database now.</string>
    <string name="backup_complete">Backup complete</string>
    <string name="action_delete">Delete</string>
    <string name="delete_plant_title">Delete %s?</string>
    <string name="delete_plant_message">Do you want to delete %s? No take-backsies.</string>
    <string name="restore_warning_message">Restoring from a backup will erase all existing plant data! This operation also requires access to external storage in order to access the backup file.</string>
    <string name="restore_warning">Restore Warning!</string>
    <string name="action_change_cover_photo">Change cover photo</string>
    <string name="future_feature">This feature will be in a future release</string>

    <plurals name="plants_to_water">
        <item quantity="one">plant to water today</item>
        <item quantity="other">plants to water today</item>
    </plurals>

    <plurals name="plants_need_watering">
        <item quantity="one">needs watering today</item>
        <item quantity="other">need watering today</item>
    </plurals>

    <plurals name="weeks">
        <item quantity="one">%d week</item>
        <item quantity="other">%d weeks</item>
    </plurals>

    <plurals name="days">
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>

    <plurals name="times">
        <item quantity="one">%d time</item>
        <item quantity="other">%d times</item>
    </plurals>

    <plurals name="photos">
        <item quantity="one">%d photo</item>
        <item quantity="other">%d photos</item>
    </plurals>

    <plurals name="watered">
        <item quantity="one">Watered %d time</item>
        <item quantity="other">Watered %d times</item>
    </plurals>

    <plurals name="fertilized">
        <item quantity="one">Fertilized %d time</item>
        <item quantity="other">Fertilized %d times</item>
    </plurals>

    <plurals name="need_watering_today">
        <item quantity="one">need watering today!</item>
        <item quantity="other">needs watering today!</item>
    </plurals>
</resources>
